plugins {
  id 'java'
  id 'application'
}

description = 'vscode-gradle :: gradle-server'

java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

repositories {
  mavenCentral()
  maven {
    url "https://groovy.jfrog.io/artifactory/plugins-release"
  }
}

dependencies {
  implementation project(":gradle-plugin-api")
  implementation files('build/libs/server.jar')
  implementation fileTree(dir: 'build/libs/runtime', include: ['*.jar'], exclude: ['gradle-tooling-api-*.jar',
  'slf4j-api-*.jar'])
  implementation("org.gradle:gradle-tooling-api:${toolingAPIVersion}")
  implementation 'javax.annotation:javax.annotation-api:1.3.2'
  implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
  implementation 'io.github.g00fy2:versioncompare:1.4.1'
  implementation project(':gradle-language-server')
  implementation "org.eclipse.lsp4j:org.eclipse.lsp4j:0.24.0"
  implementation "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.24.0"
  runtimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha6'
  testImplementation 'junit:junit:4.13.1'
  testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
  testImplementation 'org.powermock:powermock-api-mockito2:2.0.7'
}

def mainJavaDir = 'src/main/java';
def mainResourcesDir = 'src/main/resources';
def libsDir = '../extension/lib';

sourceSets {
  libsDirName = file(libsDir)
  main {
    proto {
      srcDir file('../proto')
    }
    java {
      srcDirs mainJavaDir
      srcDirs 'build/generated/source/proto/main/java'
    }
    resources {
      srcDirs mainResourcesDir
    }
  }
}

protobuf {
  generateProtoTasks {
    generateTestProto.enabled = false
    extractProto.enabled = false;
    extractIncludeProto.enabled = false;
    extractIncludeTestProto.enabled = false;
    all().each { task ->
      task.builtins {
        remove distribution
      }
    }
  }
}

clean {
  delete protobuf.generatedFilesBaseDir
  delete libsDir
}

jar {
  manifest {
    attributes(
      "Class-Path": configurations.runtimeClasspath.collect { it.getName() }.join(' '))
  }
}

application {
  mainClass = 'com.github.badsyntax.gradle.GradleServer'
}

startScripts.enabled = false
jar.enabled = true
distZip.enabled = false
distTar.enabled = false

spotless {
  java {
    importOrder()
    eclipse()
    removeUnusedImports()
    trimTrailingWhitespace()
    targetExclude "build/**"
  }
}

task serverStartScripts(type: CreateStartScripts) {
  dependsOn jar
  dependsOn 'copyRuntimeLibs'
  outputDir = file(libsDir)
  mainClass = 'com.github.badsyntax.gradle.GradleServer'
  applicationName = project.name
  classpath = jar.outputs.files
  defaultJvmOpts = ["-Dfile.encoding=UTF-8"]
  unixStartScriptGenerator.template = resources.text.fromFile(
    "$mainResourcesDir/startScriptTemplates/unixStartScript.txt"
  )
  windowsStartScriptGenerator.template = resources.text.fromFile(
    "$mainResourcesDir/startScriptTemplates/windowsStartScript.txt"
  )
}

task copyRuntimeLibs(type: Copy) {
  from configurations.runtimeClasspath
  into libsDir
  duplicatesStrategy = 'exclude'
  doFirst {
    delete libsDir
  }
}

// copyRuntimeLibs wipes libsDir in its doFirst block. The jar task also outputs
// gradle-server.jar into libsDir (via libsDirName). Without explicit ordering,
// Gradle may schedule copyRuntimeLibs after jar, deleting the freshly built
// gradle-server.jar and producing a runtime ClassNotFoundException.
jar.mustRunAfter copyRuntimeLibs

project.tasks.named("processResources") {
  dependsOn(':gradle-plugin:copyJar')
  duplicatesStrategy = 'include'
}

test {
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
    '--add-opens=java.base/java.util=ALL-UNNAMED',
    '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
    '--add-opens=java.base/java.nio.file=ALL-UNNAMED',
    '--add-opens=java.base/java.io=ALL-UNNAMED',
    '--add-opens=java.base/sun.nio.fs=ALL-UNNAMED'
}

compileJava.dependsOn 'generateProto', 'spotlessCheck'
assemble.dependsOn serverStartScripts
